[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/ui/ShopUI.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.8)

[node name="ShopUI" type="CanvasLayer"]
script = ExtResource("1")
process_mode = 3
visible = false

[node name="Control" type="Control" parent="."]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -30.0
offset_right = 240.0
offset_bottom = 30.0
theme_override_constants/separation = 20
alignment = 1

[node name="Button1" type="Button" parent="Control/HBoxContainer"]
text = "Option 1"

[node name="Button2" type="Button" parent="Control/HBoxContainer"]
text = "Option 2"

[node name="Button3" type="Button" parent="Control/HBoxContainer"]
text = "Option 3"

